# where-is-my

./: Dockerfile  README.md  create-venv  pyproject.toml
doc/: DEVELOPMENT.md  TODO.md
whereismy/: __init__.py  __version__.py  cli.py  location.py  location_test.py  server.py
